refactor(backend): 重构配置模块结构，优化用户服务和安全配置